--- a/css/topical.css
+++ b/css/topical.css
@@ -39,6 +39,7 @@ p {
 /* styler linkene og logoen inne i headeren*/
 nav {
   display: flex;
+  /* Vertikal og horisontal padding */
   padding: 2% 6%;
   justify-content: space-between;
 }
