--- a/css/main.css
+++ b/css/main.css
@@ -499,11 +499,13 @@ Dette styler elementer som er spesifikke for denne siden */
   }
 
 /* Sørger for at bildene scaler når man er i mindre skjermmodus*/
-@media (max-width: 700px) {
+@media (max-width: 1450px) {
   .image-campus {
-     float: left;
-     /* Bildet blir gjemt når skjermen er mindre */
-     display: none;
+    position: fixed;
+    opacity: 0;
+     /* Bildet blir gjemt/gjennomsiktig når skjermen er mindre, dette fordi vi har valgt å
+     legge et bilde oppå bakgrunnsbilde og siden position er absolute vil det ikke scale 
+     med bakgrunnsbilde*/
   }
   /* Når bildet forsvinner, forsvinner også linken til det originale bildet  */
   .original-image-campus {
